WEB-76: safari fix for bitter italic not showing

--- a/static/sass/all.sass
+++ b/static/sass/all.sass
@@ -121,6 +121,7 @@ h2
 
 .bitter
   font-family: $ec-font-bitter
+  font-style: italic
 //////////////////////
 
 // page: thankyou
